syntax = "proto3";

package peermsg.pb;

message ContactMessage {
    enum State {
        Sending = 0;
        Success = 1;
        Fail = 2;
    }
    string  id = 1;
    bytes   fromPeerId = 2;
    bytes   toPeerId = 3;
    string  msgType = 4;
    string  mimeType = 5;
    bytes   payload = 6;
    State   state = 7;
    int64   timestamp = 8;
    uint64  lamportime = 9;
    bytes   signature = 10;
}

message ContactMessageAck { 
    string id = 1;
}